[project]
name = "ai-video-voice-converter"
version = "0.1.0"
description = "Allow to change voice in video files (get rid of accent etc...)"
authors = [
    {name = "vfedoriv",email = "vitaliy.fedoriv@gmail.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai-whisper (>=20240930,<20240931)",
    "moviepy (>=2.1.2,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "noisereduce (>=3.0.3,<4.0.0)",
    "jiwer (>=3.1.0,<4.0.0)",
    "coqui-tts (>=0.26.0,<0.27.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "coqpit-config (>=0.2.0,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

